# flask-graphql-playground

./: README.md  app.py  pyproject.toml  run.py
api/: __init__.py  models.py  mutations.py  resolvers.py  routes.py  schema.py
tests/: conftest.py  test_models.py  test_mutations.py  test_queries.py  test_routes.py
